# LiveShot

./: .gitignore  LICENSE  LiveShot.sln  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
LiveShot.API/: Container.cs  EventPipeline.cs  IEventPipeline.cs  ILiveShotService.cs  LiveShot.API.csproj  LiveShotService.cs  Points.cs  Selection.cs
LiveShot.API/Background/: BackgroundApplication.cs  IBackgroundApplication.cs
LiveShot.API/Canvas/: AbstractDrawCanvas.cs  OpacityRectangle.cs  RectangleBounds.cs  Selection.cs
LiveShot.API/Drawing/: CanvasTool.cs  DrawingTool.cs  IDrawingTool.cs
LiveShot.API/Events/: Event.cs  OnKeyDown.cs
LiveShot.API/Image/: ImageSaveFormat.cs
LiveShot.API/Properties/: Resources.Designer.cs  Resources.en-US.Designer.cs  Resources.en-US.resx  Resources.es-ES.resx  (+2 more)
LiveShot.Objects/: LiveShot.Objects.csproj  Selection.cs
LiveShot.UI/: App.xaml  App.xaml.cs  Container.cs  Icons.xaml  LiveShot.UI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Styles.xaml
LiveShot.UI.Avalonia/: App.xaml  App.xaml.cs  LiveShot.UI.Avalonia.csproj  Startup.cs
LiveShot.UI.Controls/: CanvasPanel.cs  LiveShot.UI.Controls.csproj  SelectCanvas.cs
LiveShot.UserInterface/: App.xaml  App.xaml.cs  LiveShot.UserInterface.csproj  Program.cs  ViewLocator.cs
LiveShot.Utils/: ColorUtils.cs  FileUtils.cs  ImageUtils.cs  LiveShot.Utils.csproj  WindowUtils.cs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bitmap.rs  capture.rs  main.rs  screenshot.rs  tray.rs
src-tauri/src/os/: windows.rs
(+81 files in other folders)
