[package]
name = "liveshot"
version = "2.0.0-alpha.1"
description = "Tool to make enhanced screenshots. Inspired on LightShot"
authors = ["Kenneth Gómez <kennethgomezfdz@gmail.com>"]
license = "MIT"
repository = "https://github.com/KennethGomez/LiveShot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["global-shortcut-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

scrap = "0.5.0"
base64 = "0.21.0"
image = "0.24.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
